# Sprite

app/: build.gradle
app/src/androidTest/java/com/nemoli/sprite/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Attack.FBX  beg.fbx
app/src/main/assets/shaders/: modelTextured.fsh  modelTextured.vsh
app/src/main/cpp/: CMakeLists.txt  assimpActivity.cpp  assimpLoader.cpp  assimpLoader.h  gestureClass.cpp  math_3d.cpp  modelAssimp.cpp  modelAssimp.h  myGLFunctions.cpp  myGLFunctions.h  myGLRenderer.cpp  myJNIHelper.cpp  myJNIHelper.h  myLogger.h  myShader.cpp  myShader.h  ogldev_math_3d.h  spriteUtil.cpp  spriteUtil.h
app/src/main/java/com/nemoli/sprite/: AssimpActivity.java  GestureClass.java  MyGLRenderer.java  MyGLSurfaceView.java  TvControl.java
app/src/main/res/layout/: assimp_layout.xml
app/src/test/java/com/nemoli/sprite/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
